--- a/css/styles.css
+++ b/css/styles.css
@@ -166,8 +166,9 @@ a {
     letter-spacing: 0.02em;
 }
 
-.title-advantages { 
-    display: none;
+.ttitle-our-advantages {
+    position: absolute;
+    left: -9999px;
 }
 
 .advantages-container { 
