--- a/css/styles.css
+++ b/css/styles.css
@@ -166,14 +166,20 @@ a {
     letter-spacing: 0.02em;
 }
 
-.ttitle-our-advantages {
+.visually-hidden {
     position: absolute;
-    left: -9999px;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip-path: inset(50%);
+    white-space: nowrap;
+    border: 0;
 }
 
 .advantages-container { 
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding: 120px 0;
 } 
 
 .advantages-list {
