--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ a {
     padding: 0;
     margin: -1px;
     overflow: hidden;
-    clip-path: inset(50%);
+    clip-path: inset(0);
     white-space: nowrap;
     border: 0;
 }
@@ -189,7 +189,7 @@ a {
 }
 
 .advantages-item {
-    width: 264px;
+    width: calc((100% - 72px) / 4);
 }
 
 .advantages-title {
