--- a/css/styles.css
+++ b/css/styles.css
@@ -214,12 +214,26 @@ a {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42; 
-    padding-bottom: 72px; 
+    margin-bottom: 72px; 
 }
 
 .team-list {
     background-color: #FFFFFF;
-    }
+    border-radius: 0 0 4px 4px;
+}
+
+.team-title-paragraf {
+    padding: 32px 0;
+}
+
+.team-title {
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.team-paragraf {
+    text-align: center;
+}
 
 .section-team-container ul {
     display: flex;
