--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,10 @@ a {
     letter-spacing: 0.02em;
 }
 
+.advantages {
+    padding: 120px 0;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -176,14 +180,10 @@ a {
     padding: 0;
     margin: -1px;
     overflow: hidden;
-    clip-path: inset(0);
+    clip-path: inset(100%);
     white-space: nowrap;
     border: 0;
 }
-
-.advantages-container { 
-    padding: 120px 0;
-} 
 
 .advantages-list {
     display: flex;
@@ -251,7 +251,7 @@ a {
     padding-bottom: 120px;
 }
 
-.portfolio-title {
+.portfolio-container-title {
     margin-bottom: 72px;
 }
 
@@ -263,7 +263,7 @@ a {
 }
 
 .portfolio-item {
-    width: calc((100% -48px) / 3);
+    width: calc((100% - 48px) / 3);
 }
 
 .portfolio-title-paragraph {
