--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ a {
     text-decoration: none;
 }
 
+img {
+    display: block;
+}
+
 /* common */
 
 .container {
@@ -71,7 +75,7 @@ a {
 
 .nav-link {
     display: block;
-    padding: 24px;
+    padding: 24px 0;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -183,6 +187,7 @@ a {
     clip-path: inset(100%);
     white-space: nowrap;
     border: 0;
+    clip: rect(0 0 0 0);
 }
 
 .advantages-list {
